# talent-scout

./: .rustfmt.toml  Cargo.toml  README.md
src/: api.rs  main.rs  player.rs  utils.rs
