[package]
name = "talent-scout"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "cargo"] }
env_logger = "0.11.5"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
